uploaded videos to project3. need to update body text. finish process and sch udle for project1 and 3. need to figure out outer-frame, content, and inner-frame z-index issue. change youtube profile photo.

--- a/css/style.scss
+++ b/css/style.scss
@@ -154,6 +154,12 @@ section {
   justify-content: space-between;
 }
 
+
+.fullFrameVideo {
+  height: auto;
+  min-height: 30rem;
+}
+
 // for scrolling outside of div //
 #target{
   overflow-y: scroll;
@@ -238,7 +244,7 @@ a:active {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  column-gap: 1rem;
+  column-gap: 2rem;
   height: 100%;
   width: 100%;
   .inner-frame.simplified{
@@ -248,7 +254,7 @@ a:active {
     justify-items: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 1rem;
+    grid-column-gap: 2rem;
     .inner-border{
       opacity: 0;
       transition: all 300ms ease-in-out;
@@ -380,7 +386,7 @@ a:active {
   .inner-border {
     z-index: 999999;
     grid-column: span 4;
-    grid-column-gap: 1rem;
+    grid-column-gap: 2rem;
     display: grid;
     &:hover ~ .circle {
       .circle-gap {
@@ -522,7 +528,7 @@ a:active {
 
 
 .outer-frame {
-  z-index: 999;
+  z-index: -999;
   display: grid;
   width: calc(100% - 1rem);
   height: calc(100% - 1rem);
@@ -539,7 +545,7 @@ a:active {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: 1fr 1fr;
-    grid-column-gap: 1rem;
+    grid-column-gap: 2rem;
     margin: 0;
     position: absolute;
     justify-self: center;
@@ -808,11 +814,11 @@ a:active {
 .content-container {
   display: grid;
   // grid-template-columns: 1fr 3fr 1fr;
-  grid-column-gap: 1rem;
+  grid-column-gap: 2rem;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 1fr 8fr 1fr;
-  column-gap: 1rem;
+  column-gap: 2rem;
   row-gap: 1em;
   height: 100%;
   width: 100%;
@@ -856,7 +862,7 @@ a:active {
       width: 100%;
       display: grid;
       grid-template-columns: repeat(10, 1fr);
-      column-gap: 1rem;
+      column-gap: 2rem;
       justify-content: space-between;
       margin-bottom: 3.75rem;
       .column-6 {
@@ -889,15 +895,22 @@ a:active {
         }
       }
     }
+    .fullRow {
+      display: grid;
+      grid-column: span 10;
+      width: 100%;
+      row-gap: 2rem;
+      margin-bottom: 3.75rem;
+      overflow-x: hidden;
+    }
     .column-2-8 {
       display: grid;
       grid-column: span 10;
       width: 100%;
       display: grid;
       grid-template-columns: repeat(10, 1fr);
-      column-gap: 1rem;
+      column-gap: 2rem;
       justify-content: space-between;
-      margin-bottom: 3.75rem;
       .column-2 {
         height: 100%;
         width: 100%;
@@ -911,6 +924,9 @@ a:active {
       > img {
         margin-top: 2rem;
       }
+      // p {
+      //   margin-bottom: 2rem;
+      // }
     }
     .column-1-1 {
       grid-column: span 10;
@@ -986,7 +1002,7 @@ a:active {
       grid-column: span 10;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      column-gap: 1rem;
+      column-gap: 2rem;
       margin-bottom: 3.75rem;
       .column-5 {
         height: 100%;
@@ -996,7 +1012,7 @@ a:active {
     // .final-details {
     //   display: grid;
     //   grid-template-columns: 2fr 6fr;
-    //   grid-column-gap: 1rem;
+    //   grid-column-gap: 2rem;
     //   flex-wrap: wrap;
     //   &:not(:last-child) {
     //     margin-bottom: 1.875rem;
@@ -1092,7 +1108,7 @@ a:active {
   transition: all 300ms ease-out;
   grid-template-columns: repeat(5, 1fr);
   grid-row-gap: 1rem;
-  grid-column-gap: 1rem;
+  grid-column-gap: 2rem;
   overflow: hidden;
   // .play-column {
   //   display: flex;
